# sqlmodel-admin

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  debug_old.py  pyproject.toml
carto/: db.py  main.py  models.py  views.py
carto/static/css/: base.css
carto/templates/base/: base.html  base_admin.html
carto/templates/equity/: snapshots.detail.jinja2  snapshots.list.jinja2  snapshots.new.jinja2
sqlmodel_admin/: admin.py  base.py  model.py
sqlmodel_admin/static/css/: base.css
sqlmodel_admin/templates/: base.html  base_admin.html  create.html  list.html  models.html
tests/: one.py
