[tool.poetry]
name = "sqlmodel-admin"
version = "0.0.1"
description = "Admin pages for SQL Model with SQL Alchemy v2 and Pydantic v2 inspired by Django Admin"
authors = ["Anton De Meester <antondemeester+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
Jinja2 = "^3.0.0"
python-multipart = "^0.0.7"
sqlmodel = "^0.0.14"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
radon = "^6.0.1"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.21.1"
pyright = "^1.1.324"
uvicorn = "^0.23.2"
httpx = "^0.24.1"
bpython = "^0.24"
aiosqlite = "^0.19.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=128

[tool.ruff]
line-length=128
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.pyright]
include = ["sqlmodel_admin", "tests"]

typeCheckingMode = "strict"
reportUnknownMemberType = "warning"